--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ invoke >= 0.20
 rellu >= 0.6
 docutils >= 0.14
 robotframework >= 3.1.1
+trezor >=0.13.3
+robotframework-datadriver >= 1.6.1
+robotframework-databaselibrary >= 1.2.4
